Change post titles to include dates to resolve conflicts with same title names. Banners no longer scroll on smaller displays.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -476,11 +476,11 @@ html {
   text-align: right;
 }
 
-/*@media (max-width: 1024px) {
+@media (max-width: 700px) {
   #masthead {
     background-attachment: scroll;
   }
-}*/
+}
 /* - Brand - */
 .brand img {
   max-height: 180px;
@@ -674,11 +674,11 @@ html {
   /*background-attachment: scroll;*/
   background-attachment: fixed;
 }
-/*@media (max-width: 1024px) {
+@media (max-width: 700px) {
   .blog-background {
     background-attachment: scroll;
   }
-}*/
+}
 /* - Inner allignment - */
 .inner {
   display: table-cell;
